--- a/diccionarioPrueba/Base.lproj/Main.storyboard
+++ b/diccionarioPrueba/Base.lproj/Main.storyboard
@@ -15,6 +15,65 @@
         </array>
     </customFonts>
     <scenes>
+        <!--View Controller Responde-->
+        <scene sceneID="qOf-Cq-1tL">
+            <objects>
+                <viewController id="iqf-mV-rzn" customClass="ViewControllerResponde" customModule="diccionarioPrueba" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="flZ-lv-81h">
+                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v4a-CM-lHM">
+                                <rect key="frame" x="333" y="801" width="150" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TQM-7g-Stu">
+                                <rect key="frame" x="883" y="801" width="150" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KmQ-jf-xUI">
+                                <rect key="frame" x="333" y="913" width="144" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qnB-Lm-CWT">
+                                <rect key="frame" x="883" y="913" width="150" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Vidas: 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iXW-e0-IBw">
+                                <rect key="frame" x="1161" y="101" width="135" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="KohinoorBangla-Regular" family="Kohinoor Bangla" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Puntos: 0 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FC0-lJ-Ll0">
+                                <rect key="frame" x="611" y="100" width="144" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="KohinoorBangla-Regular" family="Kohinoor Bangla" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93720132041410342" green="1" blue="0.87645061617566966" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <viewLayoutGuide key="safeArea" id="q0H-js-Acy"/>
+                    </view>
+                    <connections>
+                        <outlet property="btAbDer" destination="KmQ-jf-xUI" id="XhY-jB-kF7"/>
+                        <outlet property="btAbIzq" destination="qnB-Lm-CWT" id="4pU-Nq-3jV"/>
+                        <outlet property="btTopDer" destination="TQM-7g-Stu" id="0Lu-3D-T6e"/>
+                        <outlet property="btTopIzq" destination="v4a-CM-lHM" id="95B-4G-hDY"/>
+                        <outlet property="lbPuntos" destination="FC0-lJ-Ll0" id="PAC-OS-00T"/>
+                        <outlet property="lbVidas" destination="iXW-e0-IBw" id="HRy-xY-PTA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9QI-DX-P0d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2878.7701317715955" y="-1743.1640625"/>
+        </scene>
         <!--View Controller Juego3-->
         <scene sceneID="EXg-R3-YDk">
             <objects>
@@ -174,6 +233,43 @@
                 </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="310" y="-188"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ciD-Z9-hXH">
+            <objects>
+                <viewController id="38h-4q-ssO" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JyE-rb-NXj">
+                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="responde" translatesAutoresizingMaskIntoConstraints="NO" id="d0h-BV-wbf">
+                                <rect key="frame" x="370" y="64" width="627" height="203"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Instrucciones del juego wuuwuw" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hXa-MV-PX2">
+                                <rect key="frame" x="186" y="312" width="995" height="545"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.97580105433772724" green="1" blue="0.90074633158960782" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jRw-SF-xqc">
+                                <rect key="frame" x="636" y="899" width="95" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Jugar"/>
+                                <connections>
+                                    <segue destination="iqf-mV-rzn" kind="show" id="B8C-Vp-P4j"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="ZiB-Az-EAL"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="QZc-Db-ggF"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nX4-zs-Rxa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2153.5871156661783" y="-1743.1640625"/>
         </scene>
         <!--ControllerJ3 Instrucciones-->
         <scene sceneID="Eig-zA-P94">
@@ -369,11 +465,30 @@
                         <outlet property="lbSelectedGame" destination="eoh-h3-V6x" id="jhd-Ax-ucv"/>
                         <outlet property="pickerView" destination="9UU-3l-2ME" id="dMj-KT-Fph"/>
                         <segue destination="Oqa-Bu-TBx" kind="presentation" identifier="juego3" id="gr3-go-IsJ"/>
+                        <segue destination="9kk-ED-1V4" kind="presentation" identifier="responde" id="Lwb-c1-4tp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DHf-1b-WWY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="308.3455344070278" y="-1028.90625"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="hRs-1G-efO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9kk-ED-1V4" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="94t-fU-EMD">
+                        <rect key="frame" x="0.0" y="20" width="1366" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="38h-4q-ssO" kind="relationship" relationship="rootViewController" id="4t0-s5-wEw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EZn-6x-YYA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1441.5812591508052" y="-1742.578125"/>
         </scene>
     </scenes>
     <resources>
@@ -381,5 +496,6 @@
         <image name="catchem" width="582" height="252"/>
         <image name="folder" width="26" height="26"/>
         <image name="pacman" width="26" height="26"/>
+        <image name="responde" width="782" height="238"/>
     </resources>
 </document>
